--- a/item2+item3/templates/index.html
+++ b/item2+item3/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Отправка изображения</title>
+    <title>Классификатор изображений</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,19 +66,23 @@
         <input type="file" name="image" id="image-input" accept="image/*" required>
         <button type="button" onclick="submitForm()">Отправить изображение</button>
     </form>
-    <div id="image-preview"></div>
-
+    <div id="image-container">
+        <div id="image-preview"></div>
+        <p id="result-text"></p>
+    </div>
+    
     <script>
         function submitForm() {
+            showText('Loading...');
             var preview = document.getElementById('image-preview');
             preview.innerHTML = '';
-
+    
             var fileInput = document.getElementById('image-input');
             var file = fileInput.files[0];
             if (file) {
                 var formData = new FormData();
                 formData.append('image', file);
-
+    
                 fetch('/upload', {
                     method: 'POST',
                     body: formData
@@ -86,39 +90,53 @@
                 .then(response => response.json())
                 .then(data => {
                     console.log(data);
-                    showText(data.text); // передача текста в функцию showText()
+                    showText(data.text);
+                    showImage(data.image);
                 })
                 .catch(error => {
                     console.error('Error:', error);
                 });
+            } else {
+                showText('Waiting for image');
             }
-            showText();
             document.getElementById('image-form').reset();
         }
-
+    
         function showText(text) {
+            var resultText = document.getElementById('result-text');
+            resultText.innerHTML = text;
+        }
+    
+        function showImage(imageSrc) {
             var preview = document.getElementById('image-preview');
             preview.innerHTML = '';
-            var textElement = document.createElement('p');
-            textElement.innerText = text;
-            preview.appendChild(textElement);
+            
+            if (imageSrc) {
+                imageSrc += '?rand=' + Math.random();
+
+                var img = document.createElement('img');
+                img.src = imageSrc;
+                preview.appendChild(img);
+            }
         }
 
+    
         document.getElementById('image-input').addEventListener('change', function (event) {
             var preview = document.getElementById('image-preview');
             preview.innerHTML = '';
             var file = event.target.files[0];
-
+    
             if (file) {
                 var reader = new FileReader();
                 reader.onload = function (e) {
                     var img = document.createElement('img');
                     img.src = e.target.result;
                     preview.appendChild(img);
+                    showText('');
                 }
                 reader.readAsDataURL(file);
             } else {
-                showText('Hello'); // вызов функции showText(), если изображение не выбрано
+                showText('Hello');
             }
         });
     </script>
