changed html file

--- a/item2+item3/templates/index.html
+++ b/item2+item3/templates/index.html
@@ -136,7 +136,7 @@
                 }
                 reader.readAsDataURL(file);
             } else {
-                showText('Hello');
+                showText('Waiting for image');
             }
         });
     </script>
